[tool.poetry]
name = "buildit-demo-agent"
version = "0.1.0"
description = "An AI agent for generating BDD test plans."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.2.0"
tenacity = "^8.2.3"
structlog = "^24.1.0"
colorama = "^0.4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"